--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-pathlib    >=   1.0.1
-pip        >=   22.0.4
-pyjokes    >=   0.6.0
-setuptools >=   60.5.0
+multithreading==0.2.0
+pathlib==1.0.1
+pyjokes==0.6.0
