--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/chatdata.txt
+chatdata.txt chatdata2022-03-31 10:33:00.025634.txt chatdata2022-03-31 10:33:02.271813.txt chatdata2022-03-31 10:35:33.991831.txt chatdata2022-03-31 10:35:37.257328.txt
