--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-multithreading==0.2.0
-pathlib==1.0.1
-pyjokes==0.6.0
+multithreading>=0.2.0
+pathlib>=1.0.1
+pyjokes>=0.6.0
+autopep8>=1.6.0
+certifi>=2021.10.8
+charset-normalizer>=2.0.12
+idna>=3.3
+logger>=1.4
+loguru>=0.6.0
+multithreading>=0.2.0
+pathlib>=1.0.1
+pycodestyle>=2.8.0
+pyjokes>=0.6.0
+requests>=2.27.1
+toml>=0.10.2
+urllib3>=1.26.9
